tests/baselines/reference/ES5SymbolProperty7(strict=true).errors.txt
ES5SymbolProperty7.ts(7,1): error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'C'.
ES5SymbolProperty7.ts(7,9): error TS2454: Variable 'Symbol' is used before being assigned.


==== ES5SymbolProperty7.ts (2 errors) ====
    var Symbol: { iterator: any };
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'C'.
            ~~~~~~
!!! error TS2454: Variable 'Symbol' is used before being assigned.